@@ -8,6 +8,8 @@ Summary of important user-visible changes for statistics 1.4.3:
 
  ** confusionmat: new function (patch #9971)
 
+ ** fitgmdist.m: fix typo in ComponentProportion (bug #59386)
+
 Summary of important user-visible changes for statistics 1.4.2:
 -------------------------------------------------------------------
 
